<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="fill_parent"
    android:background="@drawable/border_favbs">
    <!--android:background="#075070"-->


    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:id="@+id/table">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:text="@string/spotType" />
            <TextView
                android:id="@+id/typeDVVV"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="2dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:text="@string/spotInfo" />
            <TextView
                android:id="@+id/infoDVVV"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="2dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:text="@string/spotStatus" />
            <TextView
                android:id="@+id/statusDVVV"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:text="@string/spotCity" />
            <TextView
                android:id="@+id/cityDVVV"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="2dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:text="@string/spotAddress" />
            <TextView
                android:id="@+id/addressDVVV"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:text="@string/spotBeer" />
            <TextView
                android:id="@+id/beerDVVV"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="2dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:text="@string/spotPrice" />
            <TextView
                android:id="@+id/priceDVVV"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:text="@string/spotTimes" />
            <TextView
                android:id="@+id/timesDVVV"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-thin"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ffffff"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeBtn"
        android:textSize="12sp"
        android:textColor="#ffffff"
        android:background="?android:selectableItemBackground"
        android:id="@+id/remove_btn"
        android:layout_below="@+id/table"
        android:layout_centerHorizontal="true" />

</RelativeLayout>